# open-claw

./: .env.lmstudio.template  .gitignore  Aeon Chat.bat  README.md  env-vars.txt  pyproject.toml  requirements.txt
docs/: INTEGRATION_STATUS.md  architecture.md  auth_device.md  memory_model.md  mempalace.md  obsidian.md  recursive_learning_loop.md  setup_from_github.md  tools_manifest.md
firmware/esp32s3-auth-device/: README.md  platformio.ini
memory/episodic/: example_episodic.json
memory/raw/: example_raw.json
memory/reflections/: example_reflection.json
memory/schemas/: decision.schema.json  episodic_memory.schema.json  raw_memory.schema.json  reflection.schema.json  semantic_memory.schema.json  simulation.schema.json  task.schema.json
memory/semantic/: example_semantic.json
open_claw/: __init__.py  cli.py  config.py  exceptions.py  ingest.py  linker.py  memory_store.py  reflect.py
scripts/: aeon_chat.py  ingest_text.py  manage_tasks.py  run_live_test.py  run_reflection.py  search_memory.py  test_tool_calling.py
src/aeon_v1/: __init__.py  agent.py  approval_agent.py  builtin_tools.py  bus.py  chat_cli.py  config.py  data_write_agent.py  decision.py  evaluate.py  exceptions.py  hardware_auth_provider.py  ingest.py  llm.py  manifest_agent.py  memory_index_agent.py  (+13 more)
tests/: conftest.py  test_agent_orchestrator.py  test_builtin_tools.py  test_chat_cli.py  test_confidence_adjustment.py  test_evaluate.py  test_feedback.py  test_hardware_auth_provider.py  test_integration.py  test_layer3.py  test_layer7.py  test_llm.py  test_lmstudio_parallel.py  test_manifest_agent.py  test_memory_store.py  test_open_claw.py  test_reflection_failures.py  test_simulation_tool_mapping.py  test_timestamp.py  test_tool_call_store.py  test_tools.py
vault/: index.md
(+30 files in other folders)
