[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-claw"
version = "0.1.0"
description = "Local-first recursive AI memory and learning system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["memory", "AI", "obsidian", "local-first", "knowledge-graph"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
