[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "open-claw"
version = "0.2.0"
description = "Local-first AI memory and learning framework"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
open-claw = "open_claw.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["open_claw*"]
