[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aeon-v1"
version = "0.1.0"
description = "Local-first recursive AI memory and learning system"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["memory", "AI", "obsidian", "local-first", "knowledge-graph"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]
hardware = ["pyserial>=3.5"]

[project.scripts]
aeon-chat = "aeon_v1.chat_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
